fixat  UserController och kollat MessageService/Repository
funkar att hämta en chatt mellan två users som en lista av meddelanden i ordning